test/tests/stages/5_local_variables/valid/extra_credit/bitwise_shiftl_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(3)
  ;
  return
  identifier(x)
  <<
  const int(3)
  ;
  }
