test/tests/stages/5_local_variables/invalid_parse/declare_keyword_as_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  return
  =
  const int(4)
  ;
  return
  return
  +
  const int(1)
  ;
  }
